@@ -351,11 +351,11 @@ checksum=68c1999296
 format=js
 minified=1
 [js-min:js/core/connection.js]
-checksum=59ea030d8b
+checksum=0bc115a22b
 format=js
 minified=1
 [js-min:js/core/dialog.js]
-checksum=05d8f2658f
+checksum=da76b21d4a
 format=js
 minified=1
 [js-min:js/core/user.js]
@@ -442,7 +442,7 @@ format=js
 minified=1
 mtime=1471637625
 [js-min:js/vue/mixin-message.js]
-checksum=1bf6f79fd7
+checksum=10380781e1
 format=js
 minified=1
 [js-min:js/vue/mixin-messages.js]
@@ -454,7 +454,7 @@ checksum=a2aa73fa3b
 format=js
 minified=1
 [sass:sass/main.scss]
-checksum=1284e2816b
+checksum=4e239a7201
 format=css
 minified=0
 [sass-min:sass/main.scss]
